# SearchEngine-BM25-SportArticle

./: .gitignore  README.md  detik_sport_articles_combined.json  main-search.ipynb  main.py  preprocess_for_pyserini.py  pyproject.toml  pyserini_corpus_stemmed.jsonl  scraping_detik.py
corpus/: pyserini_corpus_stemmed.jsonl
indexes/detik_sport/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0.tvd  _0.tvm  _0.tvx  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.pos  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
