[project]
name = "scraping-article"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "nltk>=3.9.1",
    "pandas>=2.3.2",
    "pyserini>=1.2.0",
    "requests>=2.32.5",
    "sastrawi>=1.0.1",
    "streamlit>=1.49.1",
]
